Improve layout of date-sub-buttons for smaller widths. Fix text centering of log-view-filter message. Add z-index to log-view-filter.

--- a/css/log-view.css
+++ b/css/log-view.css
@@ -29,19 +29,19 @@
 @media (max-width: 599.98px) {
   #log-view-filter {
     padding-top: .2rem; /* moved from #log-view to prevent visibility of scrolling content */
+    width: calc(100vw - 1rem);    
   }
 }
 
 
 #log-view-filter {
-  /* padding-top: .8rem; 
-  padding-bottom: .2rem; */
-  padding: .8rem 0 .2rem 0; /* moved from #log-view to prevent visibility of scrolling content */
+  border: solid 1px purple;
   display: grid;
   position: fixed; 
-  width: calc(100vw - 2rem);
+  z-index: 50;
   box-sizing: border-box;
   background: #fff;
+  overflow-x: hidden;
 }
 
 @media (min-width: 600px) {
@@ -50,6 +50,7 @@
       "button search"
       "subButton subButton"
       "message message";
+    width: calc(100vw - 2rem);
   }
 }
 
@@ -142,16 +143,12 @@
 }
 
 #custom-date-search {
-  /*
-  box-sizing: border-box;
-  border: solid 1px orange;
-  */
-  
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   align-items: center;
-  justify-content: flex-start;
-  flex-grow: 0;
+  justify-content: flex-end;
+  flex-grow: 1;
+  /* border: solid 1px green; */
 }
 
 #log-view-filter__date-sub-buttons {
@@ -163,7 +160,7 @@
   /* flex: 1 1 auto; */
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: space-between;
 }
 
 .log-view__button {
@@ -188,9 +185,9 @@
 #log-view-filter__date-keyword-buttons {
   /* flex-grow: 1; */
   display: flex;
-  justify-content: flex-start;
-  flex-wrap: wrap; /* maybe? */
-  border: solid 1px yellow;
+  justify-content: center;
+  flex-wrap: nowrap; 
+  /* border: solid 1px yellow; */
 }
 
 #log-view__date-button, #log-view-filter__date-sub-buttons .sub-button {
@@ -411,10 +408,13 @@ not sure how that works in css */
   justify-content: center;
   flex-wrap: wrap;
   align-items: flex-start;
+  border: solid 1px pink;
+  box-sizing: border-box;
 }
 
 #log-view-filter__message-text {
-  /* display: inline-block; */
+  display: inline-block; 
+  text-align: center;
 }
 
 #log-view-filter__message-text.subject {
@@ -491,7 +491,9 @@ not sure how that works in css */
   margin: 0 .3em;
   border: solid 1px gray;
   color: gray;
-  width: 8em;
+  /* width: 8em; */
+  max-width: 10em;
+  flex-grow: 1;
   font-size: .8rem;
 }
 
