--- a/css/styles.css
+++ b/css/styles.css
@@ -92,19 +92,20 @@ body {
 
 @media (max-width: 599.98px) {
   #main-container {
-    padding: 0em;
+    padding: 0 .6rem 0 .4rem;
   }
 }
 
 @media (min-width: 600px) {
   #main-container {
-    padding: 0em 1rem; /* used to be ems, see if this throws anything off */
+    padding: 0em 1rem;
   }
 }
 
 #main-container {
   width: 100vw;
-  padding: 0 1rem;
+  /* padding: 0 1rem; */
+  border: solid 1px pink;
   box-sizing: border-box;
   margin: 0 auto;
   background: #fff;
